import { HeaderBuilder } from "./header-builder.js";
import {createBarrelsConfiguration} from "../../tests/support/create-barrels-configuration.js";

const testHeaders = [
    'Test',
    '@generated by @jojoxd/barrels',
    undefined,
    'Multiline\nTest',
    'Multiline Windows\r\nTest',
];

it.each(testHeaders)('Should generate a header', async (testHeader) => {
    const { context, } = await createBarrelsConfiguration({
        barrels: [{ directory: 'empty' }],
        header: testHeader,
    });

    const header = HeaderBuilder.buildHeader(context);

    expect(header).toMatchSnapshot();
});