// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should generate a header 1`] = `
"/**
 * Test
 */
"
`;

exports[`Should generate a header 2`] = `
"/**
 * @generated by @jojoxd/barrels
 */
"
`;

exports[`Should generate a header 3`] = `
"/**
 * @generated by @jojoxd/barrels
 */
"
`;

exports[`Should generate a header 4`] = `
"/**
 * Multiline
 * Test
 */
"
`;

exports[`Should generate a header 5`] = `
"/**
 * Multiline Windows
 * Test
 */
"
`;
